@@ -259,12 +259,13 @@ is( $mm->{PERL_ARCHIVE}, '$(PERL_INC)/libperl$(LIB_EXT)', 'PERL_ARCHIVE' );
 	local *OS2::is_aout;
 	*OS2::is_aout = \$aout;
 	
-    $mm->init_linker;
+        $mm->init_linker;
 	isnt( $mm->{PERL_ARCHIVE_AFTER}, '',
 		'PERL_ARCHIVE_AFTER should be empty without $is_aout set' );
 	$aout = 1;
-	is( $mm->{PERL_ARCHIVE_AFTER}, '', 
-		'... and blank string if it is set' );
+	is( $mm->{PERL_ARCHIVE_AFTER}, 
+            '$(PERL_INC)/libperl_override$(LIB_EXT)', 
+		'... and has libperl_override if it is set' );
 }
 
 # EXPORT_LIST
